--- a/layout/default/cart.html
+++ b/layout/default/cart.html
@@ -4,6 +4,7 @@
 	<pagenotes>
     <section class="row">
       <article>
+				<h1><print page="heading"></h1>
       	<print page="notes">
       </article>
   	</section>
