--- a/layout/default/footer.html
+++ b/layout/default/footer.html
@@ -1,7 +1,7 @@
 </main>
-<footer class="row border-top mt-5 p-5">
+<footer class="row border-top px-3 py-5 p-sm-5">
 	<aside class="col-12 col-sm">
-		<h5 class="m-0 text-center text-sm-left">Information</h5>
+		<div class="h5 m-0 text-center text-sm-left">Information</div>
 		<ul class="list-unstyled mt-2 pl-0 pl-sm-2 text-center text-sm-left">
 			<buildMenu>
 				<li><a href="<print menu=url>"><print menu="title"></a><menuCart></li>
@@ -12,7 +12,7 @@
 	</aside>
 	<address>
 		<aside class="col-12 col-sm">
-			<h5 class="m-0 text-center text-sm-left">Contact</h5>
+			<div class="h5 m-0 text-center text-sm-left">Contact</div>
 			<div class="mt-2 pl-0 pl-sm-2">
 				<email>
 					<div class="text-center text-sm-left d-block">
@@ -36,7 +36,7 @@
 	</address>
 	<hours>
 		<aside class="col-12 col-sm">
-			<h5 class="m-0 mt-3 mt-sm-0 text-center text-sm-left">Business Hours</h5>
+			<div class="h5 m-0 mt-3 mt-sm-0 text-center text-sm-left">Business Hours</div>
 			<div class="row mt-2 text-center text-sm-left">
 				<buildHours>
 					<div class="pl-0 pl-sm-2 d-block">
@@ -48,7 +48,7 @@
 	</hours>
 	<paymentoptions>
 		<aside class="col-12 col-sm">
-			<h5 class="m-0 mt-3 mt-sm-0 text-center text-sm-left">Payment Options</h5>
+			<div class="h5 m-0 mt-3 mt-sm-0 text-center text-sm-left">Payment Options</div>
 			<div class="text-center text-sm-left mt-1 pl-0 pl-sm-2">
 				<paypal><img class="mt-2 mr-1" src="core/images/paypal.svg" width="85" alt="PayPal"></paypal>
 				<afterpay><img class="mt-2 mr-1" src="core/images/afterpay.svg" width="85" alt="AfterPay"></afterpay>
@@ -63,8 +63,8 @@
 			</div>
 		</aside>
 	</paymentoptions>
-	<aside class="col-12 col-sm">
-		<h5 class="m-0 mt-3 mt-sm-0 text-center text-sm-left">Follow Us</h5>
+	<aside class="col-12 col-sm-3">
+		<div class="h5 m-0 mt-3 mt-sm-0 text-center text-sm-left">Follow Us</div>
 		<div class="mt-2 text-center">
 			<buildSocial>
 				<a class="i i-social i-3x mr-1" href="<print sociallink>" aria-label="<print rel=label>"><print socialicon></a>
@@ -115,3 +115,4 @@
 		</div>
 	</div>
 </chat>
+<div id="banner"></div>
