--- a/layout/default/header.html
+++ b/layout/default/header.html
@@ -1,5 +1,5 @@
 <accountmenu>
-	<nav class="account-menu" role="menubar">
+	<nav class="account-menu" role="navigation">
 		<input class="menubar-input" type="checkbox" id="administration-menu">
 		<label class="menubar-label" for="administration-menu" onclick>Account<img class="img-avatar avatar right" src="<print user=avatar>" alt="<print user=name>"></label>
 		<ul role="menu">
@@ -87,7 +87,7 @@
 	<div class="col-12 col-md-3 my-0 d-none d-sm-block">
 		<a href="<print meta=url>"><img class="brand" src="layout/default/images/logo.png" alt="<print config=business>"></a>
 	</div>
-	<nav role="menubar" class="col-12 col-md-9 my-0">
+	<nav role="navigation" class="col-12 col-md-9 my-0">
 		<input class="menubar-input" type="checkbox" id="mobile-menu">
     <label class="menubar-label" for="mobile-menu" onclick>Menu</label>
 		<ul role="menu">
