--- a/layout/default/orders.html
+++ b/layout/default/orders.html
@@ -3,13 +3,14 @@
 <block inbed="orders">
 	<pagenotes>
 		<section class="row mt-5">
-			<article class="col-12">
+			<article>
+				<h1><print page="heading"></h1>
 				<print page="notes">
 			</article>
 		</section>
 	</pagenotes>
 	<orderlist>
-		<section class="row mt-5">
+		<section class="row mt-5 justify-content-center">
 			<article class="card col-12 col-sm-7 mt-5 border-0">
 				<table class="border mb-0 order-list">
 					<thead class="d-none d-sm-table-header-group">
