--- a/layout/default/css/stylesheet-vars.css
+++ b/layout/default/css/stylesheet-vars.css
@@ -92,18 +92,18 @@
   --alert-danger-border-color: #f5c2c7;
   --alert-danger-color: #842029;
   --alert-danger-link: #6a1a21;
-  --danger-background-color: #f8d7da;
-  --danger-border-color: #f5c2c7;
-  --danger-color: #842029;
+  --danger-background-color: #dc3545;
+  --danger-border-color: #dc3545;
+  --danger-color: #dc3545;
   --danger-color-contrast: #fff;
   --danger-link: #6a1a21;
   --alert-dark-background-color: #d3d3d4;
   --alert-dark-border-color: #bcbebf;
   --alert-dark-color: #141619;
   --alert-dark-link: #101214;
-  --dark-background-color: #d3d3d4;
-  --dark-border-color: #bcbebf;
-  --dark-color: #141619;
+  --dark-background-color: #212529;
+  --dark-border-color: #212529;
+  --dark-color: #212529;
   --dark-color-contrast: #000;
   --dark-link: #101214;
   --alert-default-background-color: #ddd;
@@ -119,58 +119,58 @@
   --alert-info-border-color: #b6effb;
   --alert-info-color: #055160;
   --alert-info-link: #04414d;
-  --info-background-color: #cff4fc;
-  --info-border-color: #b6effb;
-  --info-color: #055160;
+  --info-background-color: #0dcaf0;
+  --info-border-color: #0dcaf0;
+  --info-color: #0dcaf0;
   --info-color-contrast: #fff;
   --info-link: #04414d;
   --alert-light-background-color: #fefefe;
   --alert-light-border-color: #fdfdfe;
   --alert-light-color: #636464;
   --alert-light-link: #4f5050;
-  --light-background-color: #fefefe;
-  --light-border-color: #fdfdfe;
-  --light-color: #636464;
+  --light-background-color: #f8f9fa;
+  --light-border-color: #f8f9fa;
+  --light-color: #f8f9fa;
   --light-color-contrast: #fff;
   --light-link: #4f5050;
   --alert-primary-background-color: #cfe2ff;
   --alert-primary-border-color: #b6d4fe;
   --alert-primary-color: #084298;
   --alert-primary-link: #06357a;
-  --primary-background-color: #cfe2ff;
-  --primary-border-color: #b6d4fe;
-  --primary-color: #084298;
+  --primary-background-color: #0d6efd;
+  --primary-border-color: #0d6efd;
+  --primary-color: #0d6efd;
   --primary-color-contrast: #fff;
   --primary-link: #06357a;
   --alert-secondary-background-color: #e2e3e5;
   --alert-secondary-border-color: #d3d6d8;
   --alert-secondary-color: #41464b;
   --alert-secondary-link: #34383c;
-  --secondary-background-color: #e2e3e5;
-  --secondary-border-color: #d3d6d8;
-  --secondary-color: #41464b;
+  --secondary-background-color: #6c757d;
+  --secondary-border-color: #6c757d;
+  --secondary-color: #6c757d;
   --secondary-color-contrast: #fff;
   --secondary-link: #34383c;
   --alert-success-background-color: #d1e7dd;
   --alert-success-border-color: #badbcc;
   --alert-success-color: #0f5132;
   --alert-success-link: #0c4128;
-  --success-background-color: #d1e7dd;
-  --success-border-color: #badbcc;
-  --success-color: #0f5132;
+  --success-background-color: #198754;
+  --success-border-color: #198754;
+  --success-color: #198754;
   --success-color-contrast: #fff;
   --success-link: #0c4128;
   --alert-warning-background-color: #fff3cd;
   --alert-warning-border-color: #ffecb5;
   --alert-warning-color: #664d03;
   --alert-warning-link: #523e02;
-  --warning-background-color: #fff3cd;
-  --warning-border-color: #ffecb5;
-  --warning-color: #664d03;
+  --warning-background-color: #ffc107;
+  --warning-border-color: #ffc107;
+  --warning-color: #ffc107;
   --warning-color-contrast: #fff;
   --warning-link: #523e02;
 
-  --justify-important: center;
+  --justify-important: left;
   --justify-normal: left;
 
   --spacing-1: .25rem !important;
@@ -294,4 +294,11 @@
 
   --chat-zindex: 1020;
   --chat-header-color: #e9e9e9;
+
+  --banner-background-color: var(--danger-background-color);
+  --banner-border-color: var(--danger-border-color);
+  --banner-heading-color: #000;
+  --banner-color: #fff;
+  --banner-link-color: #fff;
+  --banner-link-color-hover: #f40;
 };
