--- a/layout/default/faq.html
+++ b/layout/default/faq.html
@@ -5,29 +5,30 @@
 		<figure class="covertron"><print page="coverItem"></figure>
 	</cover>
   <breadcrumb>
-		<section class="row">
-			<nav class="breadcrumb">
-				<ol>
-					<json-ld-breadcrumb>
-					<breaditems>
-						<li class="breadcrumb-item"><a href="<print breadcrumb=url>"><print breadcrumb="title"></a></li>
-					</breaditems>
-					<breadcurrent>
-						<li class="breadcrumb-item active"><print breadcrumb="title"></li>
-					</breadcurrent>
-				</ol>
-			</nav>
-		</section>
+		<nav class="breadcrumb">
+			<ol>
+				<json-ld-breadcrumb>
+				<breaditems>
+					<li class="breadcrumb-item"><a href="<print breadcrumb=url>"><print breadcrumb="title"></a></li>
+				</breaditems>
+				<breadcurrent>
+					<li class="breadcrumb-item active"><print breadcrumb="title"></li>
+				</breadcurrent>
+			</ol>
+		</nav>
 	</breadcrumb>
   <pagenotes>
     <section class="row">
-      <article class="hidewhenempty"><print page="notes"></article>
+      <article>
+        <h1><print page="heading"></h1>
+        <print page="notes">
+      </article>
     </section>
   </pagenotes>
   <section class="row">
     <article>
       <items>
-        <details>
+        <details class="ml-4"<print details="open">>
           <summary><print content="title"></summary>
           <div class="ml-4">
             <print content="notes">
